--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "history": "^4.7.2",
     "immutable": "^3.8.2",
     "immutables": "0.0.0",
+    "js-file-download": "^0.4.1",
+    "prop-types": "^15.6.1",
     "qs": "^6.5.2",
     "query-string": "^6.1.0",
     "react": "^16.3.2",
